# sot-hrp2-hrpsys

./: .gitmodules  CMakeLists.txt  NEWS  README.md
doc/: Doxyfile.extra.in
project/: CMakeLists.txt
script/: CMakeLists.txt  sot_common.py.in
src/: CMakeLists.txt  plugin.cc  plugin.hh
